
{{$NEXT}}

 - SQL: added unique constraint on domain.domain

1.20130604 2013-06-04 America/Los_Angeles

 - main branches are master (devel) and releases (more obvious)
 - added mailing list impact FAQ
 - SQL: removed record.rcpt_dom
 - corrected a XML schema error
 - index.html
    - widened disposition column
    - only show rcpt domain in record (subgrid)
    - corrected subgrid row_id
 - additional validation of aggregate reports

1.20130601 2013-05-31 America/Los_Angeles

 - make sure a report record exists when fetching SMTP todo
 - added insecure SMTP fallback if STARTTLS fails
 - added color coded results to HTTP grid

1.20130531 2013-05-30 America/Los_Angeles

 - added gzip support to HTTP server, compressed JS files
 - reason is internally an arrayref of hashrefs (was a single hashref)
 - documentation additions
 - removed unused JS files
 - add validation and fixup of SPF result for incoming reports
 - normalized domain columns in spf & dkim tables

1.20130528 2013-05-28 America/Los_Angeles

 - bump major version to 1
 - normalized domain columns in report_record
 - fixups to handle reports with invalid formatting
 - improved handling for IMAP SSL connections
 - made internal represention of Mail::DMARC::dkim & spf consistent
   with their aggregate report representation

0.20130528 2013-05-27 America/Los_Angeles

 - updated Send/SMTP to use report::aggregate
 - switched back to gzip reports (instead of zip)
 - dmarc_view_reports, added filtering ability, GeoIP location

0.20130524 2013-05-23 America/Los_Angeles

 - added bin/dmarc_httpd
 - added bin/dmarc_view_reports
 - renamed: dmarc_report -> dmarc_send_reports

0.20130521 2013-05-21 America/Los_Angeles

 - check for report_record existence before insertion
 - SQL: added report_record.count column
 - subclassed aggregreate reports into Report::Aggregate
   - consolidates two agg. rep. generation methods to one
 - SQL: added table report_error
 - updated SQLite schema with native column types
