@@ -1,6 +1,8 @@
 
 {{$NEXT}}
 
+ - in aggregate reports, group by IP and auth results (was only IP)
+ - refactored SQL::retrieve_todo
  - SQL: added unique constraint on domain.domain
 
 1.20130604 2013-06-04 America/Los_Angeles
